# demote

./: Demotest.hs  Demotest2.hs  demote.cabal  demote.hs
src/Data/: Demote.hs
