name:                demote
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-2
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Demote
  -- other-modules:       
  extensions:          TemplateHaskell,
                       DeriveGeneric,
                       DeriveAnyClass,
                       DataKinds,
                       FlexibleInstances,
                       TypeOperators,
                       PatternSynonyms,
                       LambdaCase,
                       TupleSections,
                       DefaultSignatures,
                       FlexibleContexts,
                       StandaloneDeriving,
                       ScopedTypeVariables,
                       TypeFamilies
  build-depends:       base >=4.8 && <4.9, template-haskell >=2.10, mtl >=2.2
  hs-source-dirs:      src/
  default-language:    Haskell2010